dataset1235/2025-2/805158916/users/1354266131/executions/2118643220_3348296077.log
== RUN (2025-09-01 14:39:42)
-- CODE: 
tempo_estacionado = float(input())
valorppg= (tempo_estacionado  * 15) + 5
imposto = 20/100 * valorppg
valortot= valorppg + imposto

print(valortot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
456.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:41:14)
-- CODE: 
tempo_estacionado = float(input())
valorppg= (tempo_estacionado  * 15) + 5
imposto = 20/100 * valorppg
valortot= valorppg + imposto

print(round(valortot,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
456.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:39:49)
-- CODE: 
tempo_estacionado = float(input())
valorppg= (tempo_estacionado  * 15) + 5
imposto = 20/100 * valorppg
valortot= valorppg + imposto

print(valortot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
456.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:33:42)
-- CODE: 
tempo_estacionado = float(input())
valorppg= (tempo_estacionado  * 15) + 5
print(valorppg)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
110.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
140.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
50.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
80.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
380.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:39:53)
-- CODE: 
tempo_estacionado = float(input())
valorppg= (tempo_estacionado  * 15) + 5
imposto = 20/100 * valorppg
valortot= valorppg + imposto

print(valortot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
456.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:40:26)
-- CODE: 
tempo_estacionado = float(input())
valorppg= (tempo_estacionado  * 15) + 5
imposto = 20/100 * valorppg
valortot= valorppg + imposto

print(rond(valortot,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(rond(valortot,2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(rond(valortot,2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(rond(valortot,2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(rond(valortot,2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(rond(valortot,2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(rond(valortot,2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:41:01)
-- CODE: 
tempo_estacionado = float(input())
valorppg= (tempo_estacionado  * 15) + 5
imposto = 20/100 * valorppg
valortot= valorppg + imposto

print(round(valortot,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
456.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:40:49)
-- CODE: 
tempo_estacionado = float(input())
valorppg= (tempo_estacionado  * 15) + 5
imposto = 20/100 * valorppg
valortot= valorppg + imposto

print(round(valortot,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
456.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:41:06)
-- CODE: 
tempo_estacionado = float(input())
valorppg= (tempo_estacionado  * 15) + 5
imposto = 20/100 * valorppg
valortot= valorppg + imposto

print(round(valortot,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
456.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:41:10)
-- CODE: 
tempo_estacionado = float(input())
valorppg= (tempo_estacionado  * 15) + 5
imposto = 20/100 * valorppg
valortot= valorppg + imposto

print(round(valortot,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
456.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
